Correcciones y mejoras generales
Correcciones y mejoras.
Añadido forzar a los promotores a cambiar la contraseña en el primer acceso.